# Organic-Mart

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  README.md  SECURITY.md  manage.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/workflows/: ci.yml
api/: __init__.py  exceptions.py  pagination.py  urls.py  views.py
api/tests/: test_api.py  test_exceptions.py
apps/: __init__.py
apps/accounts/: __init__.py  admin.py  forms.py  managers.py  models.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  __init__.py
apps/accounts/tests/: __init__.py  test_models.py  test_views.py
apps/blog/: __init__.py  admin.py  apps.py  models.py  selectors.py  urls.py  views.py
apps/blog/migrations/: 0001_initial.py  0002_seed_starter_blog_content.py
apps/blog/tests/: test_views.py
apps/cart/: context_processors.py  services.py  urls.py  views.py
apps/cart/tests/: test_views.py
apps/catalog/: admin.py  models.py  selectors.py  urls.py  views.py
apps/catalog/migrations/: 0001_initial.py  0002_product_image.py
apps/catalog/tests/: test_views.py
apps/core/: __init__.py  admin.py  context_processors.py  exceptions.py  logging.py  middleware.py  models.py  urls.py  views.py
apps/core/tests/: test_foundation_helpers.py  (+1 more)
config/: __init__.py  asgi.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/architecture/: 01-software-architecture.md  02-database-design.md  03-folder-and-app-structure.md  04-development-roadmap.md
docs/learning/: phase-01-engineering-foundation.md
docs/runbooks/: deployment.md  local-development.md  razorpay-payment-gateway.md
infra/gunicorn/: gunicorn.conf.py
infra/nginx/: default.conf
templates/: base.html
templates/errors/: 400.html  403.html  404.html  500.html
templates/partials/: messages.html
(+21 files in other folders)
